--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Children''s periodicals, American'
 - !lcc 'AP'
+- GITenberg
 title: 'Harper''s Young People, April 5, 1881
 
   An Illustrated Weekly'
